# TractIO

./: CMakeLists.txt
src/: tractIOCommon.h
test/: vtkconvert.cpp
